src/msg/snapshots/tmi__msg__clear_msg__tests__parse_clearmsg_basic.snap
---
source: src/msg/clear_msg.rs
expression: "f(\"@login=alazymeme;room-id=;target-msg-id=3c92014f-340a-4dc3-a9c9-e5cf182f4a84;tmi-sent-ts=1594561955611 :tmi.twitch.tv CLEARMSG #pajlada :lole\")"
---
ClearMsg {
    channel: "#pajlada",
    channel_id: "",
    sender: "alazymeme",
    message_id: "3c92014f-340a-4dc3-a9c9-e5cf182f4a84",
    text: "lole",
    is_action: false,
    timestamp: 2020-07-12T13:52:35.611Z,
}
